Fix UI : edit profile + messagerie - edit profile :   - margins, spacings, font sizes.   - Member ship "since" format - messagerie : fix spacings

--- a/assets/css/modules/card.css
+++ b/assets/css/modules/card.css
@@ -63,6 +63,10 @@ Maxi card user à gauche
     border-top: 1px solid var(--bg-color-medium2);
 }
 
+.card--user-big .card__write-to-button {
+    margin-top: 2.8125rem;
+}
+
 .library-legend-ctn {
 
 }
@@ -74,4 +78,7 @@ card user normal
 
 }
 
+.card--user .card__content {
+    padding: 0 0 0 0.75rem;
+}
 
