--- a/assets/css/pages/available-books.css
+++ b/assets/css/pages/available-books.css
@@ -4,7 +4,7 @@
 }
 
 .books-list-page h1 {
-    margin: 3.125rem 0 0 0;
+    margin: 8.125rem 0 0 0;
 }
 
 .books-list-page__header {
